@@ -34,9 +34,11 @@
     </stability>
     <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
     <notes>
-- Improved help text for the PHPMD command line. Thanks to Volker
-  Dusch for this contribution. https://github.com/edorian/phpmd
-- PHPMD is now compatible with next PHP_Depend release 0.10.0
+- Fixed #9626017: Clear temporary resources after a test has finished. Fixed
+  with commit #b385f15.
+- New source layout that follows maven's conventions for the directory
+  structure of a product.
+- Switched to PHPUnit 3.5.x as testing framework
     </notes>
     <contents>
         <dir name="/">
